Laad tekst toegevoegd

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ html, body {
     font-family: "Lato", sans-serif;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 h1 {
     font-weight: normal;
 }
@@ -14,12 +18,23 @@ h1 {
 }
 
 #reden {
-    padding-left: 8px;
     font-weight: 700;
     font-size: 48px;
     color: #ff6666;
 }
 
 .container {
-    padding: 16px 64px;
+    padding: 32px 64px;
+    display: flex;
+    height: 100vh;
+}
+
+#loaded {
+    width: 100%;
+    display: none;
+    flex-direction: column;
+}
+
+#next {
+    padding-top: 64px;
 }
